# AutoFactory

./: CMakeLists.txt  factory.hpp  main.cpp
AnimalFactory/: Animal.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp
PersonFactory/: John.cpp  John.hpp  Mike.cpp  Mike.hpp  Person.hpp
